--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
 
-idf_component_register(SRCS ${app_sources} REQUIRES ulp)
+idf_component_register(SRCS ${app_sources} REQUIRES ulp esp_wifi)
 
 #ULP
 set(ulp_app_name ulp_main)
