ESP-IDF: don't use platformio

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,9 @@
 # This file was automatically generated for projects
 # without default 'CMakeLists.txt' file.
 
-FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
+FILE(GLOB_RECURSE app_sources *.*)
 
-idf_component_register(SRCS ${app_sources} REQUIRES ulp esp_wifi)
+idf_component_register(SRCS ${app_sources} INCLUDE_DIRS ../include REQUIRES ulp esp_wifi nvs_flash esp_netif)
 
 #ULP
 set(ulp_app_name ulp_main)
